--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.8.1",
-    "vue": "^2.6.12"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.9",
     "@vue/cli-plugin-eslint": "~4.5.9",
     "@vue/cli-service": "~4.5.9",
+    "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.4.0",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "vue-template-compiler": "^2.6.12"
+    "sass-loader": "^10.1.0"
   }
 }
